##
## This file is part of Gambit
## Copyright (c) 1994-2014, The Gambit Project (http://www.gambit-project.org)
##
## FILE: Makefile.am
## Top-level automake input file for Gambit
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
##

SUBDIRS = contrib

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = \
	gambit.spec \
	gambit.desktop \
        gambit.wxs \
	contrib/mac/Info.plist \
	contrib/mac/gambit.icns \
	src/labenski/README.txt \
	src/labenski/art/grab.xpm \
	src/labenski/art/hand.xpm \
	src/labenski/art/ledgreen.xpm \
	src/labenski/art/ledgrey.xpm \
	src/labenski/doc/README-plotctrl.txt \
	src/labenski/doc/README-sheet.txt \
	src/labenski/doc/README-wxthings.txt \
	src/labenski/include/wx/wxthings/bitmaps/copy.xpm \
	src/labenski/include/wx/wxthings/bitmaps/cut.xpm \
	src/labenski/include/wx/wxthings/bitmaps/findnext.xpm \
	src/labenski/include/wx/wxthings/bitmaps/find.xpm \
	src/labenski/include/wx/wxthings/bitmaps/grab.xpm \
	src/labenski/include/wx/wxthings/bitmaps/hand.xpm \
	src/labenski/include/wx/wxthings/bitmaps/help.xpm \
	src/labenski/include/wx/wxthings/bitmaps/new.xpm \
	src/labenski/include/wx/wxthings/bitmaps/open.xpm \
	src/labenski/include/wx/wxthings/bitmaps/paste.xpm \
	src/labenski/include/wx/wxthings/bitmaps/preview.xpm \
	src/labenski/include/wx/wxthings/bitmaps/print.xpm \
	src/labenski/include/wx/wxthings/bitmaps/question.xpm \
	src/labenski/include/wx/wxthings/bitmaps/redo.xpm \
	src/labenski/include/wx/wxthings/bitmaps/replace.xpm \
	src/labenski/include/wx/wxthings/bitmaps/saveall.xpm \
	src/labenski/include/wx/wxthings/bitmaps/saveas.xpm \
	src/labenski/include/wx/wxthings/bitmaps/spell.xpm \
	src/labenski/include/wx/wxthings/bitmaps/undo.xpm \
	src/gui/bitmaps/about.xpm \
	src/gui/bitmaps/adddecimal.xpm \
	src/gui/bitmaps/calc.xpm \
	src/gui/bitmaps/close.xpm \
	src/gui/bitmaps/color.xpm \
	src/gui/bitmaps/datasrc.xpm \
	src/gui/bitmaps/deldecimal.xpm \
	src/gui/bitmaps/dice.xpm \
	src/gui/bitmaps/efg.ico \
	src/gui/bitmaps/exit.xpm \
	src/gui/bitmaps/font.xpm \
	src/gui/bitmaps/gambitbig.xpm \
	src/gui/bitmaps/gambit.bmp \
	src/gui/bitmaps/gambit.ico \
	src/gui/bitmaps/gambit.xpm \
	src/gui/bitmaps/label.xpm \
	src/gui/bitmaps/layout.xpm \
	src/gui/bitmaps/move.xpm \
	src/gui/bitmaps/newcol.xpm \
	src/gui/bitmaps/newplayer.xpm \
	src/gui/bitmaps/newrow.xpm \
	src/gui/bitmaps/newtable.xpm \
	src/gui/bitmaps/newtree.xpm \
	src/gui/bitmaps/new.xpm \
	src/gui/bitmaps/next.xpm \
	src/gui/bitmaps/nfg.ico \
	src/gui/bitmaps/open.xpm \
	src/gui/bitmaps/person.xpm \
	src/gui/bitmaps/preview.xpm \
	src/gui/bitmaps/prev.xpm \
	src/gui/bitmaps/print.xpm \
	src/gui/bitmaps/profiles.xpm \
	src/gui/bitmaps/redo.xpm \
	src/gui/bitmaps/saveas.xpm \
	src/gui/bitmaps/savedata.xpm \
	src/gui/bitmaps/save.xpm \
	src/gui/bitmaps/stop.xpm \
	src/gui/bitmaps/table.xpm \
	src/gui/bitmaps/tobegin.xpm \
	src/gui/bitmaps/toend.xpm \
	src/gui/bitmaps/tree.xpm \
	src/gui/bitmaps/undo.xpm \
	src/gui/bitmaps/zoomfit.xpm \
	src/gui/bitmaps/zoomin.xpm \
	src/gui/bitmaps/zoomout.xpm \
	src/gui/bitmaps/zoom1.xpm \
	src/gui/bitmaps/gambitrc.rc \
	contrib/games/2s2x2x2.efg \
	contrib/games/2smp.efg \
	contrib/games/2x2x2.efg \
	contrib/games/4cards.efg \
	contrib/games/artist1.efg \
	contrib/games/artist2.efg \
	contrib/games/badgame1.efg \
	contrib/games/badgame2.efg \
	contrib/games/bayes1a.efg \
	contrib/games/bayes2a.efg \
	contrib/games/bcp2.efg \
	contrib/games/bcp3.efg \
	contrib/games/bcp4.efg \
	contrib/games/bhg1.efg \
	contrib/games/bhg2.efg \
	contrib/games/bhg3.efg \
	contrib/games/bhg4.efg \
	contrib/games/bhg5.efg \
	contrib/games/caro2.efg \
	contrib/games/cent2.efg \
	contrib/games/cent3.efg \
	contrib/games/cent4.efg \
	contrib/games/cent6.efg \
	contrib/games/centcs10.efg \
	contrib/games/centcs6.efg \
	contrib/games/condjury.efg \
	contrib/games/coord2.efg \
	contrib/games/coord2ts.efg \
	contrib/games/coord3.efg \
	contrib/games/coord4.efg \
	contrib/games/cross.efg \
	contrib/games/cs.efg \
	contrib/games/e01.efg \
	contrib/games/e02.efg \
	contrib/games/e03.efg \
	contrib/games/e04.efg \
	contrib/games/e05.efg \
	contrib/games/e06.efg \
	contrib/games/e07.efg \
	contrib/games/e08.efg \
	contrib/games/e09.efg \
	contrib/games/e10a.efg \
	contrib/games/e10.efg \
	contrib/games/e13.efg \
	contrib/games/e16.efg \
	contrib/games/e17.efg \
	contrib/games/e18.efg \
	contrib/games/g1.efg \
	contrib/games/g2.efg \
	contrib/games/g3.efg \
	contrib/games/holdout7.efg \
	contrib/games/holdout.efg \
	contrib/games/hs1.efg \
	contrib/games/jury_mr.efg \
	contrib/games/jury_un.efg \
	contrib/games/km1.efg \
	contrib/games/km2.efg \
	contrib/games/km3.efg \
	contrib/games/km6.efg \
	contrib/games/montyhal.efg \
	contrib/games/my_2-1.efg \
	contrib/games/my_2-4.efg \
	contrib/games/my_2-8.efg \
	contrib/games/my_3-3a.efg \
	contrib/games/my_3-3b.efg \
	contrib/games/my_3-3c.efg \
	contrib/games/my_3-3d.efg \
	contrib/games/my_3-3e.efg \
	contrib/games/my_3-4.efg \
	contrib/games/myerson.efg \
	contrib/games/nim7.efg \
	contrib/games/nim.efg \
	contrib/games/palf2.efg \
	contrib/games/palf3.efg \
	contrib/games/palf.efg \
	contrib/games/poker2.efg \
	contrib/games/poker.efg \
	contrib/games/pvw2.efg \
	contrib/games/pvw.efg \
	contrib/games/sh3.efg \
	contrib/games/sww1.efg \
	contrib/games/sww2.efg \
	contrib/games/sww3.efg \
	contrib/games/tim.efg \
	contrib/games/ttt.efg \
	contrib/games/vd.efg \
	contrib/games/w_ex1.efg \
	contrib/games/w_ex2.efg \
	contrib/games/wilson1.efg \
	contrib/games/work1.efg \
	contrib/games/work2.efg \
	contrib/games/work3.efg \
	contrib/games/2x2a.nfg \
	contrib/games/2x2const.nfg \
	contrib/games/2x2.nfg \
	contrib/games/2x2x2.nfg \
	contrib/games/2x2x2x2.nfg \
	contrib/games/2x2x2x2x2.nfg \
	contrib/games/3x3x3.nfg \
	contrib/games/5x4x3.nfg \
	contrib/games/8x2x2.nfg \
	contrib/games/8x8.nfg \
	contrib/games/cent2.nfg \
	contrib/games/coord2.nfg \
	contrib/games/coord333.nfg \
	contrib/games/coord3.nfg \
	contrib/games/coord4.nfg \
	contrib/games/csg1.nfg \
	contrib/games/csg2.nfg \
	contrib/games/csg3.nfg \
	contrib/games/csg4.nfg \
	contrib/games/deg1.nfg \
	contrib/games/deg2.nfg \
	contrib/games/e01.nfg \
	contrib/games/e02.nfg \
	contrib/games/e04.nfg \
	contrib/games/e07.nfg \
	contrib/games/g1.nfg \
	contrib/games/g2.nfg \
	contrib/games/g3.nfg \
	contrib/games/loopback.nfg \
	contrib/games/mixdom2.nfg \
	contrib/games/mixdom.nfg \
	contrib/games/oneill.nfg \
	contrib/games/pd.nfg \
	contrib/games/perfect1.nfg \
	contrib/games/perfect2.nfg \
	contrib/games/perfect3.nfg \
	contrib/games/poker.nfg \
	contrib/games/sh3.nfg \
	contrib/games/stengel.nfg \
	contrib/games/sww1.nfg \
	contrib/games/todd1.nfg \
	contrib/games/todd2.nfg \
	contrib/games/todd3.nfg \
	contrib/games/vd.nfg \
	contrib/games/wink3.nfg \
	contrib/games/winkels.nfg \
	contrib/games/yamamoto.nfg \
	contrib/games/zero.nfg \
	src/setup.py \
	src/README.rst \
	src/pygambit/__init__.py \
	src/pygambit/enumeration.py \
	src/pygambit/gameiter.py \
	src/pygambit/gte.py \
	src/pygambit/levelk.py \
	src/pygambit/nash.py \
	src/pygambit/pctrace.py \
	src/pygambit/profiles.py \
	src/pygambit/qre.py \
	src/pygambit/games/__init__.py \
	src/pygambit/games/contest.py \
	src/pygambit/games/meanstat.py \
	src/pygambit/games/public.py \
	src/pygambit/lib/__init__.py \
	src/pygambit/lib/action.pxi \
	src/pygambit/lib/basegame.pxi \
	src/pygambit/lib/behav.pxi \
	src/pygambit/lib/error.py \
	src/pygambit/lib/game.pxi \
	src/pygambit/lib/infoset.pxi \
	src/pygambit/lib/libgambit.pyx \
	src/pygambit/lib/mixed.pxi \
	src/pygambit/lib/nash.pxi \
	src/pygambit/lib/node.pxi \
	src/pygambit/lib/outcome.pxi \
	src/pygambit/lib/player.pxi \
	src/pygambit/lib/strategy.pxi \
	src/pygambit/lib/stratspt.pxi \
        src/pygambit/lib/nash.h \
	src/pygambit/lib/util.h \
	src/pygambit/tests/test_actions.py \
	src/pygambit/tests/test_behav.py \
	src/pygambit/tests/test_extensive.py \
	src/pygambit/tests/test_game.py \
	src/pygambit/tests/test_infosets.py \
	src/pygambit/tests/test_mixed.py \
	src/pygambit/tests/test_node.py \
	src/pygambit/tests/test_outcomes.py \
	src/pygambit/tests/test_players.py \
	src/pygambit/tests/test_strategic.py \
	src/pygambit/tests/test_stratspt.py \
	src/pygambit/tests/test_stratprofiles.py \
	src/pygambit/tests/test_strategies.py \
	src/pygambit/tests/test_games/basic_extensive_game.efg \
	src/pygambit/tests/test_games/complicated_extensive_game.efg \
	src/pygambit/tests/test_games/const_sum_game.nfg \
	src/pygambit/tests/test_games/mixed_behavior_game.efg \
	src/pygambit/tests/test_games/mixed_strategy.nfg \
	src/pygambit/tests/test_games/non_const_sum_game.nfg \
	src/pygambit/tests/test_games/not_perfect_recall.efg \
	src/pygambit/tests/test_games/payoff_game.nfg \
	src/pygambit/tests/test_games/perfect_recall.efg


core_SOURCES = \
	src/core/shared_ptr.h \
	src/core/array.h \
	src/core/list.h \
	src/core/vector.h \
	src/core/vector.imp \
	src/core/pvector.h \
	src/core/pvector.imp \
	src/core/dvector.h \
	src/core/dvector.imp \
	src/core/recarray.h \
	src/core/matrix.h \
	src/core/matrix.imp \
	src/core/sqmatrix.h \
	src/core/sqmatrix.imp \
	src/core/integer.cc \
	src/core/integer.h \
	src/core/rational.cc \
	src/core/rational.h \
	src/core/number.h \
	src/core/vector.cc \
	src/core/pvector.cc \
	src/core/dvector.cc \
	src/core/matrix.cc \
	src/core/sqmatrix.cc \
	src/core/function.cc \
	src/core/function.h \
	src/core/tinyxml.cc \
	src/core/tinyxmlerror.cc \
	src/core/tinyxmlparser.cc \
	src/core/tinyxml.h

agg_SOURCES = \
	src/games/gameagg.cc \
	src/games/gameagg.h \
	src/games/gamebagg.cc \
	src/games/gamebagg.h \
	src/games/agg/gray.h \
	src/games/agg/agg.cc \
	src/games/agg/agg.h \
	src/games/agg/bagg.cc \
	src/games/agg/bagg.h \
	src/games/agg/proj_func.h \
	src/games/agg/trie_map.h \
        src/games/agg/trie_map.imp

game_SOURCES = \
	src/gambit.h \
	src/games/game.cc \
	src/games/game.h \
	src/games/gameexpl.h \
	src/games/gametable.cc \
	src/games/gametable.h \
	src/games/gametree.cc \
	src/games/gametree.h \
	src/games/behav.cc \
	src/games/behav.h \
	src/games/behav.imp \
	src/games/behavitr.cc \
	src/games/behavitr.h \
	src/games/behavspt.cc \
	src/games/behavspt.h \
	src/games/mixed.cc \
	src/games/mixed.h \
	src/games/mixed.imp \
	src/games/stratitr.cc \
	src/games/stratitr.h \
	src/games/stratspt.cc \
	src/games/stratspt.h \
	src/games/nash.cc \
	src/games/file.cc \
	src/games/writer.cc \
	src/games/writer.h \
	${agg_SOURCES} \
	src/games/nash.h

linalg_SOURCES = \
	src/solvers/linalg/basis.cc \
	src/solvers/linalg/basis.h \
	src/solvers/linalg/bfs.h \
	src/solvers/linalg/btableau.cc \
	src/solvers/linalg/btableau.h \
	src/solvers/linalg/btableau.imp \
	src/solvers/linalg/lpsolve.cc \
	src/solvers/linalg/lpsolve.h \
	src/solvers/linalg/lpsolve.imp \
	src/solvers/linalg/lptab.cc \
	src/solvers/linalg/lptab.h \
	src/solvers/linalg/lptab.imp \
	src/solvers/linalg/ludecomp.cc \
	src/solvers/linalg/ludecomp.h \
	src/solvers/linalg/ludecomp.imp \
	src/solvers/linalg/tableau.h \
	src/solvers/linalg/tableau.cc \
	src/solvers/linalg/lemketab.cc \
	src/solvers/linalg/lemketab.h \
	src/solvers/linalg/lemketab.imp \
	src/solvers/linalg/lhtab.cc \
	src/solvers/linalg/lhtab.h \
	src/solvers/linalg/lhtab.imp \
	src/solvers/linalg/vertenum.h \
	src/solvers/linalg/vertenum.imp

lrslib_SOURCES = \
	src/solvers/lrs/lrslib.h \
	src/solvers/lrs/lrslib.c \
	src/solvers/lrs/lrsmp.h \
	src/solvers/lrs/lrsmp.c \
	src/solvers/lrs/lrsnashlib.h \
	src/solvers/lrs/lrsnashlib.c

gtracer_SOURCES = \
	src/solvers/gtracer/cmatrix.h \
	src/solvers/gtracer/cmatrix.cc \
	src/solvers/gtracer/gnmgame.h \
	src/solvers/gtracer/gnmgame.cc \
	src/solvers/gtracer/nfgame.h \
	src/solvers/gtracer/nfgame.cc \
	src/solvers/gtracer/aggame.h \
	src/solvers/gtracer/aggame.cc \
	src/solvers/gtracer/gtracer.h \
	src/solvers/gtracer/gnm.cc \
	src/solvers/gtracer/ipa.cc

if IS_WIN32
AM_LDFLAGS = -static -static-libgcc -static-libstdc++
endif

bin_PROGRAMS = \
	gambit-convert \
	gambit-enummixed

if WITH_ENUMPOLY
bin_PROGRAMS += gambit-enumpoly
endif 

bin_PROGRAMS += \
	gambit-enumpure \
	gambit-gnm \
	gambit-ipa \
	gambit-lcp \
	gambit-liap \
	gambit-logit \
	gambit-lp \
	gambit-simpdiv

if WITH_GUI
bin_PROGRAMS += gambit
endif

EXTRA_PROGRAMS = gambit-enumpoly gambit

AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/labenski/include ${WX_CXXFLAGS}
AM_CXXFLAGS = ${LLVM_CXXFLAGS}

## Command-line tools

gambit_convert_SOURCES = \
	${core_SOURCES} ${game_SOURCES} \
	src/tools/convert/convert.cc

gambit_enummixed_SOURCES = \
	${core_SOURCES} ${game_SOURCES} \
	${linalg_SOURCES} \
	${lrslib_SOURCES} \
	src/solvers/enummixed/clique.cc \
	src/solvers/enummixed/clique.h \
	src/solvers/enummixed/lrsenum.cc \
	src/solvers/enummixed/enummixed.cc \
	src/solvers/enummixed/enummixed.h \
	src/tools/enummixed/enummixed.cc


# For enumpoly, sources starting in 'pel' are from Pelican;
# sources from gpartltr to quiksolv were formerly in convenience lib libpoly.
gambit_enumpoly_SOURCES = \
	${core_SOURCES} ${game_SOURCES} \
	src/tools/enumpoly/pelclhpk.cc \
	src/tools/enumpoly/pelclhpk.h \
	src/tools/enumpoly/pelclqhl.cc \
	src/tools/enumpoly/pelclqhl.h \
	src/tools/enumpoly/pelclyal.cc \
	src/tools/enumpoly/pelclyal.h \
	src/tools/enumpoly/pelconv.cc \
	src/tools/enumpoly/pelconv.h \
	src/tools/enumpoly/peleval.cc \
	src/tools/enumpoly/peleval.h \
	src/tools/enumpoly/pelgennd.cc \
	src/tools/enumpoly/pelgennd.h \
	src/tools/enumpoly/pelgmatr.cc \
	src/tools/enumpoly/pelgmatr.h \
	src/tools/enumpoly/pelgntyp.h \
	src/tools/enumpoly/pelhomot.cc \
	src/tools/enumpoly/pelhomot.h \
	src/tools/enumpoly/pelpred.cc \
	src/tools/enumpoly/pelpred.h \
	src/tools/enumpoly/pelprgen.cc \
	src/tools/enumpoly/pelprgen.h \
	src/tools/enumpoly/pelproc.cc \
	src/tools/enumpoly/pelproc.h \
	src/tools/enumpoly/pelpscon.h \
	src/tools/enumpoly/pelpsys.cc \
	src/tools/enumpoly/pelpsys.h \
	src/tools/enumpoly/pelqhull.cc \
	src/tools/enumpoly/pelqhull.h \
	src/tools/enumpoly/pelsymbl.cc \
	src/tools/enumpoly/pelsymbl.h \
	src/tools/enumpoly/pelutils.cc \
	src/tools/enumpoly/pelutils.h \
	src/tools/enumpoly/gpartltr.cc \
	src/tools/enumpoly/gpartltr.h \
	src/tools/enumpoly/gpartltr.imp \
	src/tools/enumpoly/gpoly.cc \
	src/tools/enumpoly/gpoly.h \
	src/tools/enumpoly/gpoly.imp \
	src/tools/enumpoly/gpolylst.cc \
	src/tools/enumpoly/gpolylst.h \
	src/tools/enumpoly/gpolylst.imp \
	src/tools/enumpoly/gsolver.cc \
	src/tools/enumpoly/gsolver.h \
	src/tools/enumpoly/gsolver.imp \
	src/tools/enumpoly/ideal.cc \
	src/tools/enumpoly/ideal.h \
	src/tools/enumpoly/ideal.imp \
	src/tools/enumpoly/ineqsolv.cc \
	src/tools/enumpoly/ineqsolv.h \
	src/tools/enumpoly/ineqsolv.imp \
	src/tools/enumpoly/interval.cc \
	src/tools/enumpoly/interval.h \
	src/tools/enumpoly/interval.imp \
	src/tools/enumpoly/monomial.cc \
	src/tools/enumpoly/monomial.h \
	src/tools/enumpoly/monomial.imp \
	src/tools/enumpoly/pelclass.cc \
	src/tools/enumpoly/pelclass.h \
	src/tools/enumpoly/poly.cc \
	src/tools/enumpoly/poly.h \
	src/tools/enumpoly/poly.imp \
	src/tools/enumpoly/prepoly.cc \
	src/tools/enumpoly/prepoly.h \
	src/tools/enumpoly/quiksolv.cc \
	src/tools/enumpoly/quiksolv.h \
	src/tools/enumpoly/quiksolv.imp \
	src/tools/enumpoly/rectangl.cc \
	src/tools/enumpoly/rectangl.h \
	src/tools/enumpoly/rectangl.imp \
	src/tools/enumpoly/behavextend.cc \
	src/tools/enumpoly/behavextend.h \
	src/tools/enumpoly/gcomplex.cc \
	src/tools/enumpoly/gcomplex.h \
	src/tools/enumpoly/gtree.h \
	src/tools/enumpoly/gtree.imp \
	src/tools/enumpoly/linrcomb.cc \
	src/tools/enumpoly/linrcomb.h \
	src/tools/enumpoly/linrcomb.imp \
	src/tools/enumpoly/efgensup.cc \
	src/tools/enumpoly/efgensup.h \
	src/tools/enumpoly/gnarray.h \
	src/tools/enumpoly/gnarray.imp \
	src/tools/enumpoly/sfg.cc \
	src/tools/enumpoly/sfg.h \
	src/tools/enumpoly/sfstrat.cc \
	src/tools/enumpoly/sfstrat.h \
	src/tools/enumpoly/nfgensup.cc \
	src/tools/enumpoly/nfgensup.h \
	src/tools/enumpoly/odometer.cc \
	src/tools/enumpoly/odometer.h \
	src/tools/enumpoly/nfgcpoly.cc \
	src/tools/enumpoly/nfgcpoly.h \
	src/tools/enumpoly/nfghs.cc \
	src/tools/enumpoly/nfghs.h \
	src/tools/enumpoly/efgpoly.cc \
	src/tools/enumpoly/nfgpoly.cc \
	src/tools/enumpoly/enumpoly.cc

gambit_enumpure_SOURCES = \
	${core_SOURCES} ${game_SOURCES} \
	src/solvers/enumpure/enumpure.h \
	src/tools/enumpure/enumpure.cc 

gambit_gnm_SOURCES = \
	${core_SOURCES} ${game_SOURCES} \
	${gtracer_SOURCES} \
	src/solvers/gnm/gnm.cc \
	src/solvers/gnm/gnm.h \
	src/tools/gt/nfggnm.cc

gambit_ipa_SOURCES = \
	${core_SOURCES} ${game_SOURCES} \
	${gtracer_SOURCES} \
	src/solvers/ipa/ipa.cc \
	src/solvers/ipa/ipa.h \
	src/tools/gt/nfgipa.cc

gambit_lcp_SOURCES = \
	${core_SOURCES} ${game_SOURCES} \
	${linalg_SOURCES} \
	src/solvers/lcp/efglcp.cc \
	src/solvers/lcp/nfglcp.cc \
	src/solvers/lcp/lcp.h \
	src/tools/lcp/lcp.cc

gambit_liap_SOURCES = \
	${core_SOURCES} ${game_SOURCES} \
	src/tools/liap/efgliap.cc \
	src/tools/liap/efgliap.h \
	src/tools/liap/nfgliap.cc \
	src/tools/liap/nfgliap.h \
	src/tools/liap/liap.cc

gambit_logit_SOURCES = \
	${core_SOURCES} ${game_SOURCES} \
	src/tools/logit/logbehav.h \
	src/tools/logit/logbehav.imp \
	src/tools/logit/path.cc \
	src/tools/logit/path.h \
	src/tools/logit/efglogit.h \
	src/tools/logit/efglogit.cc \
	src/tools/logit/nfglogit.h \
	src/tools/logit/nfglogit.cc \
	src/tools/logit/logit.cc

gambit_lp_SOURCES = \
	${core_SOURCES} ${game_SOURCES} \
	${linalg_SOURCES} \
	src/tools/lp/efglp.cc \
	src/tools/lp/efglp.h \
	src/tools/lp/nfglp.cc \
	src/tools/lp/nfglp.h \
	src/tools/lp/lp.cc

gambit_simpdiv_SOURCES = \
	${core_SOURCES} ${game_SOURCES} \
	src/solvers/simpdiv/simpdiv.cc \
	src/solvers/simpdiv/simpdiv.h \
	src/tools/simpdiv/nfgsimpdiv.cc

gambit_SOURCES = \
	${core_SOURCES} ${game_SOURCES} \
	src/labenski/src/sheetatr.cpp \
	src/labenski/src/sheet.cpp \
	src/labenski/src/sheetedg.cpp \
	src/labenski/src/sheetedt.cpp \
	src/labenski/src/sheetren.cpp \
	src/labenski/src/sheetsel.cpp \
	src/labenski/src/sheetspt.cpp \
	src/labenski/src/sheettbl.cpp \
	src/labenski/src/block.cpp \
	src/labenski/src/genergdi.cpp \
	src/labenski/src/geometry.cpp \
	src/labenski/src/menubtn.cpp \
	src/labenski/src/optvalue.cpp \
	src/labenski/src/range.cpp \
	src/labenski/src/spinctld.cpp \
	src/labenski/src/toggle.cpp \
	src/labenski/src/fparser.cpp \
	src/labenski/src/fparser.hh \
	src/labenski/src/fourier.c \
	src/labenski/src/lm_lsqr.cpp \
	src/labenski/src/plotctrl.cpp \
	src/labenski/src/plotcurv.cpp \
	src/labenski/src/plotdata.cpp \
	src/labenski/src/plotdraw.cpp \
	src/labenski/src/plotfunc.cpp \
	src/labenski/src/plotmark.cpp \
	src/labenski/src/plotprnt.cpp \
	src/labenski/include/wx/plotctrl/fourier.h \
	src/labenski/include/wx/plotctrl/fparser.h \
	src/labenski/include/wx/plotctrl/lm_lsqr.h \
	src/labenski/include/wx/plotctrl/plotctrl.h \
	src/labenski/include/wx/plotctrl/plotcurv.h \
	src/labenski/include/wx/plotctrl/plotdata.h \
	src/labenski/include/wx/plotctrl/plotdefs.h \
	src/labenski/include/wx/plotctrl/plotdraw.h \
	src/labenski/include/wx/plotctrl/plotfunc.h \
	src/labenski/include/wx/plotctrl/plotmark.h \
	src/labenski/include/wx/plotctrl/plotprnt.h \
	src/labenski/include/wx/sheet/pairarr.h \
	src/labenski/include/wx/sheet/sheetatr.h \
	src/labenski/include/wx/sheet/sheetdef.h \
	src/labenski/include/wx/sheet/sheetedg.h \
	src/labenski/include/wx/sheet/sheetedt.h \
	src/labenski/include/wx/sheet/sheet.h \
	src/labenski/include/wx/sheet/sheetren.h \
	src/labenski/include/wx/sheet/sheetsel.h \
	src/labenski/include/wx/sheet/sheetspt.h \
	src/labenski/include/wx/sheet/sheettbl.h \
	src/labenski/include/wx/sheet/wx24defs.h \
	src/labenski/include/wx/wxthings/block.h \
	src/labenski/include/wx/wxthings/bmpcombo.h \
	src/labenski/include/wx/wxthings/dropdown.h \
	src/labenski/include/wx/wxthings/genergdi.h \
	src/labenski/include/wx/wxthings/geometry.h \
	src/labenski/include/wx/wxthings/medsort.h \
	src/labenski/include/wx/wxthings/menubtn.h \
	src/labenski/include/wx/wxthings/optvalue.h \
	src/labenski/include/wx/wxthings/range.h \
	src/labenski/include/wx/wxthings/spinctld.h \
	src/labenski/include/wx/wxthings/thingdef.h \
	src/labenski/include/wx/wxthings/toggle.h \
	src/gui/analysis.cc \
	src/gui/analysis.h \
	src/gui/app.cc \
	src/gui/app.h \
	src/gui/edittext.cc \
	src/gui/edittext.h \
	src/gui/dlabout.cc \
	src/gui/dlabout.h \
	src/gui/dleditmove.cc \
	src/gui/dleditmove.h \
	src/gui/dleditnode.cc \
	src/gui/dleditnode.h \
	src/gui/dlefglayout.cc \
	src/gui/dlefglayout.h \
	src/gui/dlefglegend.cc \
	src/gui/dlefglegend.h \
	src/gui/dlefglogit.cc \
	src/gui/dlefglogit.h \
	src/gui/dlefgreveal.cc \
	src/gui/dlefgreveal.h \
	src/gui/dlexcept.h \
	src/gui/dlgameprop.cc \
	src/gui/dlgameprop.h \
	src/gui/dlinsertmove.cc \
	src/gui/dlinsertmove.h \
	src/gui/dlnash.cc \
	src/gui/dlnash.h \
	src/gui/dlnashmon.cc \
	src/gui/dlnashmon.h \
	src/gui/dlnfglogit.cc \
	src/gui/efgdisplay.cc \
	src/gui/efgdisplay.h \
	src/gui/efglayout.cc \
	src/gui/efglayout.h \
	src/gui/efgpanel.cc \
	src/gui/efgpanel.h \
	src/gui/efgprofile.cc \
	src/gui/efgprofile.h \
	src/gui/gamedoc.cc \
	src/gui/gamedoc.h \
	src/gui/gameframe.cc \
	src/gui/gameframe.h \
	src/gui/menuconst.h \
	src/gui/nfgpanel.cc \
	src/gui/nfgpanel.h \
	src/gui/nfgprofile.cc \
	src/gui/nfgprofile.h \
	src/gui/nfgtable.cc \
	src/gui/nfgtable.h \
	src/gui/renratio.cc \
	src/gui/renratio.h \
	src/gui/style.cc \
	src/gui/style.h \
	src/gui/valnumber.cc \
	src/gui/valnumber.h


if IS_WIN32
gambit_LDADD = $(RC_OBJECT_PATH) $(WX_LIBS_STATIC) -ldeflate -lzstd -llerc -lWebP
else
gambit_LDADD = $(RC_OBJECT_PATH) $(WX_LIBS)
endif


osx-bundle:
	make all
	-rm -rf Gambit.app
	-mkdir Gambit.app    
	-mkdir Gambit.app/Contents
	-mkdir Gambit.app/Contents/MacOS
	-mkdir Gambit.app/Contents/Resources
	cp ${top_srcdir}/contrib/mac/Info.plist Gambit.app/Contents
	cp ${top_srcdir}/contrib/mac/gambit.icns Gambit.app/Contents/Resources/gambit.icns
	echo -n 'APPL????' > Gambit.app/Contents/PkgInfo
	cp gambit Gambit.app/Contents/MacOS/gambit
	cp ${bin_PROGRAMS} Gambit.app/Contents/MacOS

osx-dmg:  osx-bundle
	-rm -rf .dmg
	-mkdir .dmg
	cp -r Gambit.app .dmg
	hdiutil create Gambit.dmg -volname Gambit -srcfolder .dmg -format UDZO -imagekey zlib-level=9
	rm -rf .dmg

msw-msi: 
	-mkdir installer
	cp gambit* installer
	candle gambit.wxs
	light -ext WixUIExtension gambit.wixobj

clang-tidy:
	clang-tidy src/core/*.cc -- -I src -I src/labenski/include -DVERSION="" ${WX_CXXFLAGS}
	clang-tidy src/games/*.cc src/games/*/*.cc -- -I src -I src/labenski/include -DVERSION="" ${WX_CXXFLAGS}
	clang-tidy src/solvers/*/*.cc -- -I src -I src/labenski/include -DVERSION="" ${WX_CXXFLAGS}
	clang-tidy src/tools/*/*.cc -- -I src -I src/labenski/include -DVERSION="" ${WX_CXXFLAGS}
	clang-tidy src/gui/*.cc -- -I src -I src/labenski/include -DVERSION="" ${WX_CXXFLAGS}

