dnl Process this file with autoconf to produce a configure script.
AC_INIT(sources/gambit.cc)
AM_INIT_AUTOMAKE(gambit, 0.97.1.5)
dnl AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX

AC_ARG_WITH(libgambit-prefix,
[  --with-libgambit-prefix=PREFIX     Prefix where libgambit is installed ],
  libgambit_prefix="$withval", libgambit_prefix="")
LIBGAMBIT_INCLUDES="-I${libgambit_prefix}/include"
AC_SUBST(LIBGAMBIT_INCLUDES)

LIBGAMBIT_LIBS="-L${libgambit_prefix}/lib"
AC_SUBST(LIBGAMBIT_LIBS)

dnl------------------------
dnl Checking for wxWindows
dnl------------------------

dnl check for wx-config
WX_PATH_WXCONFIG(2.4.0, WXCONFIG=1)
if test "$WXCONFIG" != 1; then
    AC_MSG_ERROR([
            Please check that wx-config is in path, the directory
            where wxWindows libraries are installed (returned by
            'wx-config --libs' command) is in LD_LIBRARY_PATH or
            equivalent variable and wxWindows is version 2.4.0 or above.
    ])
fi

CXXFLAGS="${CXXFLAGS} ${WX_CXXFLAGS} ${LIBGAMBIT_INCLUDES}"
CXXFLAGS=`echo $CXXFLAGS | sed 's/-fno-exceptions//g'`
dnl Newer versions of gcc issue a warning if /usr/local/include listed
dnl in search path
CXXFLAGS=`echo $CXXFLAGS | sed 's/-I\/usr\/local\/include//g'`
LDFLAGS="${LDFLAGS} ${LIBGAMBIT_LIBS} ${WX_LIBS}"

AC_OUTPUT(Makefile sources/Makefile
          efg/Makefile nfg/Makefile)


